# rust-projects

./: README.md
API-call/: Cargo.toml
API-call/src/: main.rs
Actix-rhai/: Cargo.toml
Actix-rhai/src/: add.rhai  main.rs  multiply.rhai
Basic-Authentication/: Cargo.toml
Basic-Authentication/src/: main.rs
Compress-file/: Cargo.toml
Compress-file/src/: main.rs
Extract-links/: Cargo.toml
Extract-links/src/: main.rs
FirebaseCrud/: Cargo.toml
FirebaseCrud/src/: main.rs
HR-zoo/: .gitignore  Cargo.toml
HR-zoo/src/: main.rs
Merkle-tree/: Cargo.toml
Simple-hash-function/: Cargo.toml
Simple-hash-function/src/: main.rs
SportifyAPI/: Cargo.toml
SportifyAPI/src/: main.rs
async-await/: Cargo.toml
blockchain/src/: blockchain.rs
extract-zip-files/: Cargo.toml
extract-zip-files/src/: main.rs
get-request/: Cargo.toml
guessing-game/src/: main.rs
image-download/: Cargo.toml
image-download/src/: main.rs
minigrep/: output.txt  poem.txt  test.txt
minigrep/src/: lib.rs  main.rs
my-project/src/: lib.rs
rust-csv/: Cargo.toml
rust-csv/src/: main.rs
rust-eth/: Cargo.toml
rust-eth/src/: contract_deploy.rs  simple_transactions.rs
rust-json/: Cargo.toml
rust-json/src/: main.rs
rust-structs/src/: main.rs
scrape-website/: Cargo.toml  finance.yahoo.com_2022-12-06_16.44.39.html  finance.yahoo.com_2022-12-06_16.44.39.json
scrape-website/src/: main.rs  models.rs
solana-test/: Anchor.toml
solana-test/tests/: solana-test.js  testProgram.js
structs-example/src/: main.rs
write-json-data/: Cargo.toml
write-json-data/src/: main.rs
(+4 files in other folders)
